--- a/guaruja.css
+++ b/guaruja.css
@@ -9,11 +9,11 @@ body:not(.voltar) {
 
 .margem{
     text-align: center;
-    background-color: #3e5db4;
-    border-top: 25px solid #3e5db4;
-    border-right: 5px solid #3e5db4;
-    border-bottom: 25px solid #3e5db4;
-    border-left: 5px solid #3e5db4;
+    background-color: #a2bd0c;
+    border-top: 25px solid #a2bd0c;
+    border-right: 5px solid #a2bd0c;
+    border-bottom: 25px solid #a2bd0c;
+    border-left: 5px solid #a2bd0c;
 }
 
 .voltar, .anterior{
@@ -28,7 +28,7 @@ body:not(.voltar) {
 
 .text-container {
     
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url('imagens/cidades/bertioga.jpg'); 
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url('imagens/cidades/guaruja.webp'); 
     background-size: cover;
     background-position: center;
     color: white; 
@@ -55,7 +55,7 @@ body:not(.voltar) {
 h2{
     font-size: 40px;
     text-align: center;
-    text-decoration: underline rgb(61, 233, 84);
+    text-decoration: underline rgb(19, 25, 100);
 }
 
 
@@ -131,10 +131,10 @@ a:hover::after {
   }
   
   ::-webkit-scrollbar-thumb {
-    background-color: #70b876; /* cor do "ponteiro" da barra de rolagem */
-    border-radius: 6px; /* borda arredondada do "ponteiro" */
+    background-color: #37327e;
+    border-radius: 6px;
   }
   
   ::-webkit-scrollbar-track {
-    background-color: #b9ddff; /* cor da trilha da barra de rolagem */
+    background-color: #b9ddff;
   }
