--- a/santos.css
+++ b/santos.css
@@ -9,11 +9,11 @@ body:not(.voltar) {
 
 .margem{
     text-align: center;
-    background-color: #3e5db4;
-    border-top: 25px solid #3e5db4;
-    border-right: 5px solid #3e5db4;
-    border-bottom: 25px solid #3e5db4;
-    border-left: 5px solid #3e5db4;
+    background-color: #8c92a1;
+    border-top: 25px solid #8c92a1;
+    border-right: 5px solid #8c92a1;
+    border-bottom: 25px solid #8c92a1;
+    border-left: 5px solid #8c92a1;
 }
 
 .voltar, .anterior{
@@ -25,10 +25,9 @@ body:not(.voltar) {
     font-size: 15px;
 }
 
-
 .text-container {
     
-    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url('imagens/cidades/bertioga.jpg'); 
+    background-image: linear-gradient(to bottom, rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)), url('imagens/cidades/santos.jpg'); 
     background-size: cover;
     background-position: center;
     color: white; 
@@ -55,7 +54,7 @@ body:not(.voltar) {
 h2{
     font-size: 40px;
     text-align: center;
-    text-decoration: underline rgb(61, 233, 84);
+    text-decoration: underline rgb(202, 37, 26);
 }
 
 
@@ -131,10 +130,10 @@ a:hover::after {
   }
   
   ::-webkit-scrollbar-thumb {
-    background-color: #70b876; /* cor do "ponteiro" da barra de rolagem */
-    border-radius: 6px; /* borda arredondada do "ponteiro" */
+    background-color: #8f4343;
+    border-radius: 6px;
   }
   
   ::-webkit-scrollbar-track {
-    background-color: #b9ddff; /* cor da trilha da barra de rolagem */
+    background-color: #a7a7a7;
   }
