--- a/bertioga.css
+++ b/bertioga.css
@@ -9,11 +9,11 @@ body:not(.voltar) {
 
 .margem{
     text-align: center;
-    background-color: #3e5db4;
-    border-top: 25px solid #3e5db4;
-    border-right: 5px solid #3e5db4;
-    border-bottom: 25px solid #3e5db4;
-    border-left: 5px solid #3e5db4;
+    background-color: #367dad;
+    border-top: 25px solid #367dad;
+    border-right: 5px solid #367dad;
+    border-bottom: 25px solid #367dad;
+    border-left: 5px solid #367dad;
 }
 
 .voltar, .anterior{
